--- a/css/style.css
+++ b/css/style.css
@@ -1813,7 +1813,12 @@ h1, h2, h3, h4, h5,
 
 .listing-item {
   position: relative;
-  overflow: hidden; }
+  overflow: hidden; 
+  max-width: 100%;
+  min-width: 100%;
+  height:200px;
+  width:200px;
+  margin: 0 auto;}
   .listing-item:after {
     position: absolute;
     content: "";
