--- a/css/style.css
+++ b/css/style.css
@@ -1816,9 +1816,10 @@ h1, h2, h3, h4, h5,
   overflow: hidden; 
   max-width: 100%;
   min-width: 100%;
-  height:200px;
+  height:170px;
   width:200px;
-  margin: 0 auto; }
+  margin: 0 auto; 
+}
   .listing-item:after {
     position: absolute;
     content: "";
